--- a/src/App.css
+++ b/src/App.css
@@ -122,3 +122,16 @@ footer {
   background-color: blue;
   color: white;
 }
+
+.spinner {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  color: white;
+  font-size: 2rem;
+}
